--- a/index.html
+++ b/index.html
@@ -3,27 +3,18 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport"
-          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="format-detection" content="telephone=no" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="MobileOptimized" content="176" />
-    <meta name="HandheldFriendly" content="True" />
-    <meta name="robots" content="noindex,nofollow" />
+          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <meta name="format-detection" content="telephone=no"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="MobileOptimized" content="176"/>
+    <meta name="HandheldFriendly" content="True"/>
+    <meta name="robots" content="noindex,nofollow"/>
     <link rel="stylesheet" href="style.css">
     <title>SIBA</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-
-
 </head>
 <body>
-<input type="text" placeholder="Input text in regular input..." id="regular_field" />
-<div
-        class="input"
-        contenteditable="true"
-        data-placeholder="Input text in contenteditable field..."
-        id="text_field"
-></div>
-
+<input type="text" placeholder="Название задачи" id="task_name"/>
 
 <script src="app.js"></script>
 </body>
