--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <meta name="robots" content="noindex,nofollow"/>
     <link rel="stylesheet" href="style.css">
     <title>SIBA</title>
+    <script>
+        function setThemeClass() {
+            document.documentElement.className = Telegram.WebApp.colorScheme;
+        }
+        Telegram.WebApp.onEvent('themeChanged', setThemeClass);
+        setThemeClass();
+    </script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
