--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 </head>
 <body>
 <input type="text" placeholder="Название задачи" id="task_name"/>
+<label class="switch">
+    <input type="checkbox" placeholder="Повторять">
+    <span class="slider round"></span>
+</label>
 
 <script src="app.js"></script>
 </body>
