--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
 </head>
 <body>
 <input type="text" placeholder="Название задачи" id="task_name"/>
-<label class="switch">
-    <input type="checkbox" placeholder="Повторять">
-    <span class="slider round"></span>
-</label>
+Checkbox: <input type="checkbox" id="myCheck" onclick="myFunction()">
+
+<p id="text" style="display:none">Checkbox is CHECKED!</p>
 
 <script src="app.js"></script>
 </body>
