--- a/index.html
+++ b/index.html
@@ -42,6 +42,29 @@
         <option value="type3">Type 3</option>
     </select><br>
 </form>
+
+<script>
+    $('#repeat').change(function() {
+        if(this.checked) {
+            $('#dateTime').prop('type', 'time');
+            $('#frequency').show();
+        } else {
+            $('#dateTime').prop('type', 'datetime-local');
+            $('#frequency').hide();
+        }
+    });
+
+    $('#target').change(function() {
+        if(this.checked) {
+            $('#value').show();
+            $('#valueType').show();
+        } else {
+            $('#value').hide();
+            $('#valueType').hide();
+        }
+    });
+
+</script>
 <script src="app.js"></script>
 </body>
 </html>
