--- a/index.html
+++ b/index.html
@@ -63,7 +63,14 @@
             $('#valueType').hide();
         }
     });
-
+    Telegram.WebApp.onEvent('mainButtonClicked', function(){
+        var taskData = $('#taskForm').serializeArray().reduce(function(obj, item) {
+            obj[item.name] = item.value;
+            return obj;
+        }, {});
+        tg.sendData(JSON.stringify(taskData));
+        tg.close();
+    });
 </script>
 <script src="app.js"></script>
 </body>
