--- a/test.html
+++ b/test.html
@@ -1,61 +1,95 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-  <title>Task Creation Page</title>
+  <title>Task Page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- CSS -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+  <!-- jQuery and JS bundle w/ Popper.js -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-<form id="taskForm">
-  <label for="taskName">Task Name:</label><br>
-  <input type="text" id="taskName" name="taskName"><br>
-  <input type="checkbox" id="important" name="important">
-  <label for="important"> Important</label><br>
-  <input type="datetime-local" id="dateTime" name="dateTime"><br>
-  <input type="checkbox" id="repeat" name="repeat">
-  <label for="repeat"> Repeat</label><br>
-  <select id="frequency" name="frequency" style="display:none;">
-    <option value="daily">Daily</option>
-    <option value="weekly">Weekly</option>
-    <option value="monthly">Monthly</option>
-  </select><br>
-  <input type="checkbox" id="target" name="target">
-  <label for="target"> Target</label><br>
-  <input type="text" id="value" name="value" style="display:none;">
-  <select id="valueType" name="valueType" style="display:none;">
-    <option value="type1">Type 1</option>
-    <option value="type2">Type 2</option>
-    <option value="type3">Type 3</option>
-  </select><br>
-  <input type="button" value="Create Task" onclick="createTask()">
-</form>
-
+<div class="container">
+  <form id="taskForm">
+    <div class="form-group">
+      <label for="taskName">Task Name</label>
+      <input type="text" class="form-control" id="taskName" placeholder="Enter Task">
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="important">
+      <label class="form-check-label" for="important">Important</label>
+    </div>
+    <div class="form-group">
+      <label for="dateTime">Date & Time</label>
+      <input type="datetime-local" class="form-control" id="dateTime">
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="repeat">
+      <label class="form-check-label" for="repeat">Repeat</label>
+    </div>
+    <div class="form-group" style="display:none;" id="selectFrequency">
+      <label for="frequency">Frequency</label>
+      <select class="form-control" id="frequency">
+        <option>Daily</option>
+        <option>Weekly</option>
+        <option>Monthly</option>
+      </select>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="target">
+      <label class="form-check-label" for="target">Target</label>
+    </div>
+    <div class="form-group" style="display:none;" id="targetValueGroup">
+      <label for="targetValue">Target Value</label>
+      <input type="text" class="form-control" id="targetValue" placeholder="Enter Target Value">
+    </div>
+    <div class="form-group" style="display:none;" id="valueTypeGroup">
+      <label for="valueType">Value Type</label>
+      <select class="form-control" id="valueType">
+        <option>Type 1</option>
+        <option>Type 2</option>
+        <option>Type 3</option>
+      </select>
+    </div>
+    <button class="btn btn-primary" onclick="submitForm(event)">Submit</button>
+  </form>
+</div>
 <script>
   $('#repeat').change(function() {
     if(this.checked) {
       $('#dateTime').prop('type', 'time');
-      $('#frequency').show();
+      $('#selectFrequency').show();
     } else {
       $('#dateTime').prop('type', 'datetime-local');
-      $('#frequency').hide();
+      $('#selectFrequency').hide();
     }
   });
 
   $('#target').change(function() {
     if(this.checked) {
-      $('#value').show();
-      $('#valueType').show();
+      $('#targetValueGroup').show();
+      $('#valueTypeGroup').show();
     } else {
-      $('#value').hide();
-      $('#valueType').hide();
+      $('#targetValueGroup').hide();
+      $('#valueTypeGroup').hide();
     }
   });
 
-  function createTask() {
-    var taskData = $('#taskForm').serializeArray().reduce(function(obj, item) {
-      obj[item.name] = item.value;
-      return obj;
-    }, {});
-    console.log(JSON.stringify(taskData));
+  function submitForm(e) {
+    e.preventDefault();
+    const taskData = {
+      taskName: $('#taskName').val(),
+      important: $('#important').is(':checked'),
+      dateTime: $('#dateTime').val(),
+      repeat: $('#repeat').is(':checked'),
+      frequency: $('#frequency').val(),
+      target: $('#target').is(':checked'),
+      targetValue: $('#targetValue').val(),
+      valueType: $('#valueType').val(),
+    }
+    const jsonData = JSON.stringify(taskData);
+    console.log(jsonData);
   }
 </script>
 </body>
