--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <form id="taskForm">
         <div class="form-group">
             <label for="taskName">Наименование задачи</label>
-            <input type="text" class="form-control" id="taskName" placeholder="Enter Task">
+            <input type="text" class="form-control" id="taskName" placeholder="Введите название задачи">
         </div>
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="important">
@@ -54,7 +54,7 @@
         </div>
         <div class="form-group" style="display:none;" id="targetValueGroup">
             <label for="targetValue">Количество</label>
-            <input type="text" class="form-control" id="targetValue" placeholder="Enter Target Value">
+            <input type="number" class="form-control" id="targetValue" placeholder="Введите количество">
         </div>
         <div class="form-group" style="display:none;" id="valueTypeGroup">
             <label for="valueType">Тип значения</label>
