--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="form-group" style="display:none;" id="targetValueGroup">
             <label for="targetValue">Количество</label>
-            <input type="number" class="form-control" id="targetValue" placeholder="Введите количество">
+            <input pattern="[0-9]*" type="text" class="form-control" id="targetValue" placeholder="Введите количество">
         </div>
         <div class="form-group" style="display:none;" id="valueTypeGroup">
             <label for="valueType">Тип значения</label>
