--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="important">
             <label class="form-check-label" for="important">Важно</label>
+        </div>
+        <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="repeat">
             <label class="form-check-label" for="repeat">Повторять</label>
         </div>
