--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
             <input type="text" class="form-control" id="taskName" placeholder="Введите название задачи">
         </div>
         <div class="form-check">
+            <label class="form-check-label" for="important">
             <input class="form-check-input" type="checkbox" value="" id="important">
-            <label class="form-check-label" for="important">Важно</label>
+           Важно</label>
         </div>
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="repeat">
