--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
             <input type="text" class="form-control" id="taskName" placeholder="Введите название задачи">
         </div>
         <div class="form-check">
-            <label class="form-check-label" for="important">
             <input class="form-check-input" type="checkbox" value="" id="important">
-           Важно</label>
+            <label class="form-check-label" for="important">Важно</label>
         </div>
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="repeat">
@@ -49,6 +48,15 @@
                 <option>Еженедельно</option>
                 <option>Ежемесячно</option>
             </select>
+        </div>
+        <div id="daysOfWeek" style="display:none">
+            <label><input type="checkbox" name="days" value="Mon">пн</label>
+            <label><input type="checkbox" name="days" value="Tue">вт</label>
+            <label><input type="checkbox" name="days" value="Wed">ср</label>
+            <label><input type="checkbox" name="days" value="Thu">чт</label>
+            <label><input type="checkbox" name="days" value="Fri">пт</label>
+            <label><input type="checkbox" name="days" value="Sat">сб</label>
+            <label><input type="checkbox" name="days" value="Sun">вс</label>
         </div>
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="target">
@@ -74,6 +82,14 @@
     </form>
 </div>
 <script>
+    $("#frequency").change(function() {
+        if ($(this).val() == "Еженедельно") {
+            $("#daysOfWeek").show();
+        } else {
+            $("#daysOfWeek").hide();
+            $('input[name="days"]').prop('checked', false);
+        }
+    });
     $('#repeat').change(function() {
         if(this.checked) {
             $('#dateTime').prop('type', 'time');
@@ -103,6 +119,9 @@
             target: $('#target').is(':checked'),
             targetValue: $('#targetValue').val(),
             valueType: $('#valueType').val(),
+            days: $("input[name='days']:checked").map(function() {
+                return this.value;
+            }).get(),
         }
         tg.sendData(JSON.stringify(taskData));
        tg.CloudStorage.setItem("1",taskData)
