--- a/test.html
+++ b/test.html
@@ -1,96 +1,57 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-  <title>Task Page</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- CSS -->
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
-  <!-- jQuery and JS bundle w/ Popper.js -->
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <style>
+    #daysOfWeek {
+      display: flex;
+      gap: 10px;
+    }
+  </style>
 </head>
 <body>
-<div class="container">
-  <form id="taskForm">
-    <div class="form-group">
-      <label for="taskName">Task Name</label>
-      <input type="text" class="form-control" id="taskName" placeholder="Enter Task">
-    </div>
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="" id="important">
-      <label class="form-check-label" for="important">Important</label>
-    </div>
-    <div class="form-group">
-      <label for="dateTime">Date & Time</label>
-      <input type="datetime-local" class="form-control" id="dateTime">
-    </div>
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="" id="repeat">
-      <label class="form-check-label" for="repeat">Repeat</label>
-    </div>
-    <div class="form-group" style="display:none;" id="selectFrequency">
-      <label for="frequency">Frequency</label>
-      <select class="form-control" id="frequency">
-        <option>Daily</option>
-        <option>Weekly</option>
-        <option>Monthly</option>
-      </select>
-    </div>
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="" id="target">
-      <label class="form-check-label" for="target">Target</label>
-    </div>
-    <div class="form-group" style="display:none;" id="targetValueGroup">
-      <label for="targetValue">Target Value</label>
-      <input type="text" class="form-control" id="targetValue" placeholder="Enter Target Value">
-    </div>
-    <div class="form-group" style="display:none;" id="valueTypeGroup">
-      <label for="valueType">Value Type</label>
-      <select class="form-control" id="valueType">
-        <option>Type 1</option>
-        <option>Type 2</option>
-        <option>Type 3</option>
-      </select>
-    </div>
-    <button class="btn btn-primary" onclick="submitForm(event)">Submit</button>
-  </form>
-</div>
+
+<form id="dataForm">
+  <label for="frequency">Frequency:</label>
+  <select id="frequency" name="frequency">
+    <option value="daily">Daily</option>
+    <option value="weekly">Weekly</option>
+    <option value="monthly">Monthly</option>
+  </select>
+
+  <div id="daysOfWeek" style="display:none">
+    <label><input type="checkbox" name="days" value="Mon">Mon</label>
+    <label><input type="checkbox" name="days" value="Tue">Tue</label>
+    <label><input type="checkbox" name="days" value="Wed">Wed</label>
+    <label><input type="checkbox" name="days" value="Thu">Thu</label>
+    <label><input type="checkbox" name="days" value="Fri">Fri</label>
+    <label><input type="checkbox" name="days" value="Sat">Sat</label>
+    <label><input type="checkbox" name="days" value="Sun">Sun</label>
+  </div>
+
+  <button type="button" onclick="submitForm()">Send</button>
+</form>
+
 <script>
-  $('#repeat').change(function() {
-    if(this.checked) {
-      $('#dateTime').prop('type', 'time');
-      $('#selectFrequency').show();
+  $("#frequency").change(function() {
+    if ($(this).val() == "weekly") {
+      $("#daysOfWeek").show();
     } else {
-      $('#dateTime').prop('type', 'datetime-local');
-      $('#selectFrequency').hide();
+      $("#daysOfWeek").hide();
+      $('input[name="days"]').prop('checked', false);
     }
   });
 
-  $('#target').change(function() {
-    if(this.checked) {
-      $('#targetValueGroup').show();
-      $('#valueTypeGroup').show();
-    } else {
-      $('#targetValueGroup').hide();
-      $('#valueTypeGroup').hide();
-    }
-  });
-
-  function submitForm(e) {
-    e.preventDefault();
-    const taskData = {
-      taskName: $('#taskName').val(),
-      important: $('#important').is(':checked'),
-      dateTime: $('#dateTime').val(),
-      repeat: $('#repeat').is(':checked'),
-      frequency: $('#frequency').val(),
-      target: $('#target').is(':checked'),
-      targetValue: $('#targetValue').val(),
-      valueType: $('#valueType').val(),
-    }
-    const jsonData = JSON.stringify(taskData);
-    console.log(jsonData);
+  function submitForm() {
+    const data = {
+      frequency: $("#frequency").val(),
+      days: $("input[name='days']:checked").map(function() {
+        return this.value;
+      }).get()
+    };
+    alert(JSON.stringify(data, null, 2));
   }
 </script>
+
 </body>
 </html>
