--- a/index.html
+++ b/index.html
@@ -26,59 +26,57 @@
 <body>
 <div class="container">
     <form id="taskForm">
-        <div class="form-group">
+        <div class="taskCard">
             <input type="text" class="form-control" id="taskName" placeholder="Введите название задачи">
-        </div>
-        <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="important">
             <label class="form-check-label" for="important">Важно</label>
         </div>
-        <div class="form-check">
+
+        <div class="taskCard">
             <input class="form-check-input" type="checkbox" value="" id="repeat">
             <label class="form-check-label" for="repeat">Повторять</label>
-        </div>
-        <div class="form-group">
             <label for="dateTime">Дата/Время</label>
             <input type="datetime-local" class="form-control" id="dateTime">
-        </div>
-        <div class="form-group" style="display:none;" id="selectFrequency">
-            <label for="frequency">Периодичность</label>
-            <select class="form-control" id="frequency">
-                <option>Ежедневно</option>
-                <option>Еженедельно</option>
-                <option>Ежемесячно</option>
-            </select>
-        </div>
-        <div id="daysOfWeek" style="display:none">
-            <label><input type="checkbox" name="days" value="MONDAY">пн</label>
-            <label><input type="checkbox" name="days" value="TUESDAY">вт</label>
-            <label><input type="checkbox" name="days" value="WEDNESDAY">ср</label>
-            <label><input type="checkbox" name="days" value="THURSDAY">чт</label>
-            <label><input type="checkbox" name="days" value="FRIDAY">пт</label>
-            <label><input type="checkbox" name="days" value="SATURDAY">сб</label>
-            <label><input type="checkbox" name="days" value="SUNDAY">вс</label>
-        </div>
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="target">
-            <label class="form-check-label" for="target">Цель</label>
-        </div>
-        <div class="form-group" style="display:none;" id="targetValueGroup">
-            <label for="targetValue">Количество</label>
-            <input pattern="[0-9]*" type="text" class="form-control" id="targetValue" placeholder="Введите количество">
-        </div>
-        <div class="form-group" style="display:none;" id="valueTypeGroup">
-            <label for="valueType">Тип значения</label>
-            <select class="form-control" id="valueType">
-                <option>раз</option>
-                <option>миллилитров</option>
-                <option>страниц</option>
-                <option>километров</option>
-                <option>штук</option>
-                <option>минут</option>
-                <option>часов</option>
-            </select>
+            <div class="form-group" style="display:none;" id="selectFrequency">
+                <label for="frequency">Периодичность</label>
+                <select class="form-control" id="frequency">
+                    <option>Ежедневно</option>
+                    <option>Еженедельно</option>
+                    <option>Ежемесячно</option>
+                </select>
+            </div>
+            <div id="daysOfWeek" style="display:none">
+                <label><input type="checkbox" name="days" value="MONDAY">пн</label>
+                <label><input type="checkbox" name="days" value="TUESDAY">вт</label>
+                <label><input type="checkbox" name="days" value="WEDNESDAY">ср</label>
+                <label><input type="checkbox" name="days" value="THURSDAY">чт</label>
+                <label><input type="checkbox" name="days" value="FRIDAY">пт</label>
+                <label><input type="checkbox" name="days" value="SATURDAY">сб</label>
+                <label><input type="checkbox" name="days" value="SUNDAY">вс</label>
+            </div>
         </div>
 
+
+        <div class="taskCard">
+            <input class="form-check-input" type="checkbox" value="" id="target">
+            <label class="form-check-label" for="target">Цель</label>
+            <div class="form-group" style="display:none;" id="targetValueGroup">
+                <label for="targetValue">Количество</label>
+                <input pattern="[0-9]*" type="text" class="form-control" id="targetValue" placeholder="Введите количество">
+            </div>
+            <div class="form-group" style="display:none;" id="valueTypeGroup">
+                <label for="valueType">Тип значения</label>
+                <select class="form-control" id="valueType">
+                    <option>раз</option>
+                    <option>миллилитров</option>
+                    <option>страниц</option>
+                    <option>километров</option>
+                    <option>штук</option>
+                    <option>минут</option>
+                    <option>часов</option>
+                </select>
+            </div>
+        </div>
     </form>
 </div>
 <script>
