--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
         <div class="taskCard">
             <input class="form-check-input" type="checkbox" value="" id="repeat">
             <label class="form-check-label" for="repeat">Повторять</label>
+            <div>
             <label for="dateTime">Дата/Время</label>
             <input type="datetime-local" class="form-control" id="dateTime">
+            </div>
             <div class="form-group" style="display:none;" id="selectFrequency">
                 <label for="frequency">Периодичность</label>
                 <select class="form-control" id="frequency">
