--- a/test.html
+++ b/test.html
@@ -16,6 +16,7 @@
     .taskCard{
       border-radius: 10px;
       border: 1px solid #0088cc;
+      background-color: #0088cc;
       padding: 20px;
       margin: 20px 0;
     }
