--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
   <style>
     body{
       font-family: Arial, sans-serif;
-      color: #333;
+      color: #222222;
     }
 
     .container{
@@ -16,7 +16,7 @@
     .taskCard{
       border-radius: 10px;
       border: 1px solid #0088cc;
-      background-color: #0088cc;
+      background-color: #333333;
       padding: 20px;
       margin: 20px 0;
     }
