--- a/test.html
+++ b/test.html
@@ -1,65 +1,26 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Time Management</title>
-  <style>
-    body{
-      font-family: Arial, sans-serif;
-      color: #222222;
-    }
-
-    .container{
-      max-width: 600px;
-      margin: auto;
-    }
-
-    .taskCard{
-      border-radius: 10px;
-      border: 1px solid #0088cc;
-      background-color: #333333;
-      padding: 20px;
-      margin: 20px 0;
-    }
-
-    .taskCard h2{
-      color: #0088cc;
-    }
-
-    .taskCard button{
-      padding: 10px 20px;
-      border: none;
-      background-color: #0088cc;
-      color: white;
-      cursor: pointer;
-      text-decoration: none;
-      margin-top: 10px;
-      display: inline-block;
-    }
-  </style>
-</head>
-
+<html lang="ru">
 <body>
-<div class="container">
-  <h1>Time Management</h1>
+<form action="/submissionURL" method="post">
+  <label for="myInput">My Input:</label><br>
+  <input type="text" id="myInput" name="myInput" required>
+  <span class="error" style="color:red;display:none;">This field is required.</span><br>
+  <input type="submit" value="Submit">
+</form>
 
-  <div class="taskCard">
-    <h2>Task 1</h2>
-    <p>Details about task 1</p>
-    <button>Start</button>
-  </div>
+<script>
+  let form = document.querySelector('form')
+  form.addEventListener('submit', function(event) {
+    let input = form.querySelector('#myInput');
+    let errorMsg = form.querySelector('.error');
+    if (!input.value) {
+      event.preventDefault(); // stop form submission
+      errorMsg.style.display = 'block'; // show the error message
+    } else {
+      errorMsg.style.display = 'none'; // hide the error message
+    }
+  });
+</script>
 
-  <div class="taskCard">
-    <h2>Task 2</h2>
-    <p>Details about task 2</p>
-    <button>Start</button>
-  </div>
-
-  <div class="taskCard">
-    <h2>Task 3</h2>
-    <p>Details about task 3</p>
-    <button>Start</button>
-  </div>
-
-</div>
 </body>
 </html>
