--- a/index.html
+++ b/index.html
@@ -91,6 +91,15 @@
             $('input[name="days"]').prop('checked', false);
         }
     });
+    $("#frequency").change(function() {
+        if ($(this).val() == "Ежемесячно") {
+            $('#dateTime').prop('type', 'datetime-local');
+            $('#selectFrequency').show();
+        } else {
+            $('#dateTime').prop('type', 'time');
+            $('#selectFrequency').hide();
+        }
+    });
     $('#repeat').change(function() {
         if(this.checked) {
             $('#dateTime').prop('type', 'time');
