--- a/test.html
+++ b/test.html
@@ -8,18 +8,18 @@
   <input type="submit" value="Submit">
 </form>
 
-<script>
-  let form = document.querySelector('form')
-  form.addEventListener('submit', function(event) {
-    let input = form.querySelector('#myInput');
-    let errorMsg = form.querySelector('.error');
-    if (!input.value) {
-      event.preventDefault(); // stop form submission
-      errorMsg.style.display = 'block'; // show the error message
-    } else {
-      errorMsg.style.display = 'none'; // hide the error message
-    }
-  });
+<script>let form = document.querySelector('form')
+form.addEventListener('submit', function(event) {
+  let input = form.querySelector('#myInput');
+  let errorMsg = form.querySelector('.error');
+  if (!input.value) {
+    event.preventDefault(); // stop form submission
+    errorMsg.style.display = 'block'; // show the error message
+  } else {
+    errorMsg.style.display = 'none'; // hide the error message
+  }
+});
+
 </script>
 
 </body>
