--- a/404.html
+++ b/404.html
@@ -5,13 +5,68 @@
     <title>Title</title>
 </head>
 <body>
+<div class="container">
+    <form id="taskForm">
+        <div class="taskCard">
+            <input type="text" id="taskName" placeholder="Введите название задачи">
+            <span class="error" style="color:red;display:none;">This field is required.</span><br>
+            <input class="form-check-input" type="checkbox" value="" id="important">
+            <label class="form-check-label" for="important">Важно</label>
+        </div>
+
+        <div class="taskCard">
+            <input class="form-check-input" type="checkbox" value="" id="repeat">
+            <label class="form-check-label" for="repeat">Повторять</label>
+            <div>
+                <label for="dateTime">Дата/Время</label>
+                <input type="datetime-local" id="dateTime">
+            </div>
+            <div class="form-group" style="display:none;" id="selectFrequency">
+                <label for="frequency">Периодичность</label>
+                <select id="frequency">
+                    <option>Ежедневно</option>
+                    <option>Еженедельно</option>
+                    <option>Ежемесячно</option>
+                </select>
+            </div>
+            <div id="daysOfWeek" style="display:none">
+                <label><input type="checkbox" name="days" value="MONDAY">пн</label>
+                <label><input type="checkbox" name="days" value="TUESDAY">вт</label>
+                <label><input type="checkbox" name="days" value="WEDNESDAY">ср</label>
+                <label><input type="checkbox" name="days" value="THURSDAY">чт</label>
+                <label><input type="checkbox" name="days" value="FRIDAY">пт</label>
+                <label><input type="checkbox" name="days" value="SATURDAY">сб</label>
+                <label><input type="checkbox" name="days" value="SUNDAY">вс</label>
+            </div>
+        </div>
+
+
+        <div class="taskCard">
+            <input class="form-check-input" type="checkbox" value="" id="target">
+            <label class="form-check-label" for="target">Цель</label>
+            <div class="form-group" style="display:none;" id="targetValueGroup">
+                <label for="targetValue">Количество</label>
+                <input pattern="[0-9]*" type="text" id="targetValue" placeholder="Введите количество">
+            </div>
+            <div class="form-group" style="display:none;" id="valueTypeGroup">
+                <label for="valueType">Тип значения</label>
+                <select  id="valueType">
+                    <option>раз</option>
+                    <option>миллилитров</option>
+                    <option>страниц</option>
+                    <option>километров</option>
+                    <option>штук</option>
+                    <option>минут</option>
+                    <option>часов</option>
+                </select>
+            </div>
+        </div>
+    </form>
+</div>
 <script>
 
-    let myString = window.location.herf();
-    let encodedValue = btoa(myString);
-    let decodedValue = atob(encodedValue);
-    console.log(myString); // Welcome to freeCodeCamp!
-    console.log(decodedValue); // Welcome to freeCodeCamp!
+    const currentUrl = window.location.href;
+    console.log(currentUrl);
 </script>
 </body>
 </html>
