--- a/404.html
+++ b/404.html
@@ -69,6 +69,8 @@
     console.log(currentUrl);
     var decodedHTML = window.atob(currentUrl);
     console.log(decodedHTML);
+    const obj = JSON.parse(decodedHTML);
+    document.getElementById("taskName").innerHTML = obj.id;
 </script>
 </body>
 </html>
