--- a/404.html
+++ b/404.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <meta name="format-detection" content="telephone=no"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="MobileOptimized" content="176"/>
+    <meta name="HandheldFriendly" content="True"/>
+    <meta name="robots" content="noindex,nofollow"/>
+    <link rel="stylesheet" href="style.css">
+    <title>SIBA</title>
+    <script>
+        function setThemeClass() {
+            document.documentElement.className = Telegram.WebApp.colorScheme;
+        }
+        Telegram.WebApp.onEvent('themeChanged', setThemeClass);
+        setThemeClass();
+    </script>
+    <!-- jQuery and JS bundle w/ Popper.js -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
 <div class="container">
     <form id="taskForm">
         <div class="taskCard">
+            <input type="text" id="id" style="display:none;">
             <input type="text" id="taskName" placeholder="Введите название задачи">
             <span class="error" style="color:red;display:none;">This field is required.</span><br>
             <input class="form-check-input" type="checkbox" value="" id="important">
@@ -64,17 +84,73 @@
     </form>
 </div>
 <script>
+    $("#frequency").change(function() {
+        if ($(this).val() == "Еженедельно") {
+            $("#daysOfWeek").show();
+        } else {
+            $("#daysOfWeek").hide();
+            $('input[name="days"]').prop('checked', false);
+        }
+    });
+    $("#frequency").change(function() {
+        if ($(this).val() == "Ежемесячно") {
+            $('#dateTime').prop('type', 'datetime-local');
+        } else {
+            $('#dateTime').prop('type', 'time');
+        }
+    });
+    $('#repeat').change(function() {
+        if(this.checked) {
+            $('#dateTime').prop('type', 'time');
+            $('#selectFrequency').show();
+        } else {
+            $('#dateTime').prop('type', 'datetime-local');
+            $('#selectFrequency').hide();
+        }
+    });
+
+    $('#target').change(function() {
+        if(this.checked) {
+            $('#targetValueGroup').show();
+            $('#valueTypeGroup').show();
+        } else {
+            $('#targetValueGroup').hide();
+            $('#valueTypeGroup').hide();
+        }
+    });
+
+    Telegram.WebApp.onEvent('mainButtonClicked', function() {
+        const taskData = {
+            id: $('#id').val(),
+            taskName: $('#taskName').val(),
+            important: $('#important').is(':checked'),
+            dateTime: $('#dateTime').val(),
+            repeat: $('#repeat').is(':checked'),
+            frequency: $('#frequency').val(),
+            target: $('#target').is(':checked'),
+            targetValue: $('#targetValue').val(),
+            valueType: $('#valueType').val(),
+            days: $("input[name='days']:checked").map(function () {
+                return this.value;
+            }).get(),
+        }
+
+        tg.sendData(JSON.stringify(taskData));
+        tg.close();
+    });
 
     const currentUrl = window.location.href.substring(39);
     console.log(currentUrl);
     var decodedHTML = window.atob(currentUrl);
     console.log(decodedHTML);
     const obj = JSON.parse(decodedHTML);
-    document.getElementById("taskName").value = obj.id;
+    document.getElementById("id").value = obj.id;
+    document.getElementById("taskName").value = obj.taskName;
 
     console.log(obj.id);
 
 
 </script>
+<script src="app.js"></script>
 </body>
 </html>
