--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="utf-8">
     <meta name="viewport"
@@ -20,7 +20,6 @@
     </script>
     <!-- jQuery and JS bundle w/ Popper.js -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
@@ -33,7 +32,6 @@
             <input class="form-check-input" type="checkbox" value="" id="important">
             <label class="form-check-label" for="important">Важно</label>
         </div>
-
         <div class="taskCard">
             <input class="form-check-input" type="checkbox" value="" id="repeat">
             <label class="form-check-label" for="repeat">Повторять</label>
@@ -59,8 +57,6 @@
                 <label><input type="checkbox" name="days" value="SUNDAY">вс</label>
             </div>
         </div>
-
-
         <div class="taskCard">
             <input class="form-check-input" type="checkbox" value="" id="target">
             <label class="form-check-label" for="target">Цель</label>
