--- a/index.html
+++ b/index.html
@@ -111,6 +111,13 @@
             $('#valueTypeGroup').hide();
         }
     });
+    window.addEventListener('load', () => {
+        var now = new Date();
+        now.setMinutes(now.getMinutes() - now.getTimezoneOffset());
+        now.setMilliseconds(null)
+        now.setSeconds(null)
+        document.getElementById('dateTime').value = now.toISOString().slice(0, -1);
+    });
 
     Telegram.WebApp.onEvent('mainButtonClicked', function(){
         const taskData = {
