--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
                 </select>
             </div>
             <div id="daysOfWeek" style="display:none">
-                <label><input type="checkbox" name="days" value="MONDAY">пн</label>
-                <label><input type="checkbox" name="days" value="TUESDAY">вт</label>
-                <label><input type="checkbox" name="days" value="WEDNESDAY">ср</label>
-                <label><input type="checkbox" name="days" value="THURSDAY">чт</label>
-                <label><input type="checkbox" name="days" value="FRIDAY">пт</label>
-                <label><input type="checkbox" name="days" value="SATURDAY">сб</label>
-                <label><input type="checkbox" name="days" value="SUNDAY">вс</label>
+                <label><input type="checkbox" name="days" value="MO">пн</label>
+                <label><input type="checkbox" name="days" value="TU">вт</label>
+                <label><input type="checkbox" name="days" value="WE">ср</label>
+                <label><input type="checkbox" name="days" value="TH">чт</label>
+                <label><input type="checkbox" name="days" value="FR">пт</label>
+                <label><input type="checkbox" name="days" value="SA">сб</label>
+                <label><input type="checkbox" name="days" value="SU">вс</label>
             </div>
         </div>
         <div class="taskCard">
