--- a/test.html
+++ b/test.html
@@ -8,13 +8,15 @@
   </style>
 </head>
 <body>
-<label class="inline-checkbox">
+<label class="switch">
   <input type="checkbox">
-  Toggle Checkbox 1
+  <span class="slider"></span>
 </label>
-<label class="inline-checkbox">
+
+<!-- Rounded switch -->
+<label class="switch">
   <input type="checkbox">
-  Toggle Checkbox 2
+  <span class="slider round"></span>
 </label>
 </body>
 </html>
