--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     <form id="taskForm">
         <div class="taskCard">
             <input type="text" id="taskName" placeholder="Введите название задачи">
-            <label class="inline-checkbox">
-                <input type="checkbox" id="important">
-                Важно
+            <label class="switch">
+                <input type="checkbox" id="important">Важно
+                <span class="slider round"></span>
             </label>
-            <label class="inline-checkbox">
-                <input type="checkbox" id="repeat">
-                Повторять
+            <label class="switch">
+                <input type="checkbox" id="repeat">Повторять
+                <span class="slider round"></span>
             </label>
         </div>
         <div class="taskCard">
@@ -58,8 +58,10 @@
             </div>
         </div>
         <div class="taskCard">
-            <input class="form-check-input" type="checkbox" value="" id="target">
-            <label class="form-check-label" for="target">Цель</label>
+            <label class="switch">
+                <input type="checkbox" id="target">Цель
+                <span class="slider round"></span>
+            </label>
             <div class="form-group" style="display:none;" id="targetValueGroup">
                 <label for="targetValue">Количество</label>
                 <input pattern="[0-9]*" type="text" id="targetValue" placeholder="Введите количество">
