--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
         if(this.checked) {
             $('#targetValueGroup').show();
             $('#valueTypeGroup').show();
+            $('#targetValue').val("1");
         } else {
             $('#targetValueGroup').hide();
             $('#valueTypeGroup').hide();
