--- a/test.html
+++ b/test.html
@@ -2,21 +2,20 @@
 <html>
 <head>
   <style>
-    .inline-checkbox {
+    .gapped-checkbox {
       display: inline-block;
+      margin-right: 200px;
     }
   </style>
 </head>
 <body>
-<label class="switch">
+<label class="gapped-checkbox">
   <input type="checkbox">
-  <span class="slider"></span>
+  Toggle Checkbox 1
 </label>
-
-<!-- Rounded switch -->
-<label class="switch">
+<label class="gapped-checkbox">
   <input type="checkbox">
-  <span class="slider round"></span>
+  Toggle Checkbox 2
 </label>
 </body>
 </html>
