--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="taskCard">
             <label for="dateTime">Дата/Время</label>
             <input type="datetime-local" id="dateTime">
-            <button id="addTime">ADD+</button>
+            <button id="addTime">+</button>
             <div class="form-group" style="display:none;" id="selectFrequency">
                 <label for="frequency">Периодичность</label>
                 <select id="frequency">
